external-crates/move/crates/move-package-alt/tests/data/manifest_parsing_invalid/basic_missing_git_dep/Move.snap
---
source: crates/move-package-alt/tests/manifest_parsing_tests.rs
---
TOML parse error at line 11, column 7
   |
11 | foo = { rename-from = "Foo", override = true, rev = "releases/v1" }
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
data did not match any variant of untagged enum ManifestDependencyInfo
